fix login modal not wrapping around buttons

--- a/app/assets/stylesheets/login_form.scss
+++ b/app/assets/stylesheets/login_form.scss
@@ -51,7 +51,7 @@ input {
   font-size: 16px;
   color: white;
   font-family: 'Montserrat', sans-serif;
-
+  display: block;
 }
 
 .submit-btn:hover {
@@ -67,7 +67,7 @@ input {
   font-size: 16px;
   color: white;
   font-family: 'Montserrat', sans-serif;
-
+  display: block;
 }
 
 .demo-btn:hover {
